--- a/LeBi/src/com/lebi/view/Paciente.fxml
+++ b/LeBi/src/com/lebi/view/Paciente.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lebi.controller.PacienteController">
    <children>
       <TableView fx:id="tbConsultas" layoutX="101.0" layoutY="85.0" prefHeight="229.0" prefWidth="399.0">
         <columns>
@@ -23,17 +23,23 @@
             <Font size="31.0" />
          </font>
       </Label>
-      <Label layoutX="108.0" layoutY="335.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
+      <Label layoutX="108.0" layoutY="340.0" text="Para agendar uma nova consulta, clique no botão abaixo:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Button id="btAgendar" fx:id="btAgendar" layoutX="190.0" layoutY="371.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="220.0" text="Agendar" />
+      <Button id="btAgendar" fx:id="btAgendar" layoutX="190.0" layoutY="372.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="220.0" text="Agendar" />
       <Button id="btVoltar" fx:id="btVoltar" layoutX="12.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarMain" prefHeight="27.0" prefWidth="81.0" text="Voltar">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
       <TextField fx:id="txUser" disable="true" layoutX="456.0" layoutY="13.0" prefHeight="21.0" prefWidth="130.0" />
+      <Button layoutX="189.0" layoutY="470.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" text="Desmarcar" />
+      <Label layoutX="53.0" layoutY="437.0" text="Para desmarcar uma consulta, selecione na tabela e clique no botão abaixo:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
