--- a/LeBi/bin/com/lebi/view/Paciente.fxml
+++ b/LeBi/bin/com/lebi/view/Paciente.fxml
@@ -25,7 +25,7 @@
          </font>
       </Label>
       <Button id="btAgendar" fx:id="btAgendar" layoutX="101.0" layoutY="460.0" mnemonicParsing="false" onAction="#escolherEspecialidade" prefHeight="40.0" prefWidth="261.0" text="Agendar" />
-      <Button id="btVoltar" fx:id="btVoltar" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#voltarMain" prefHeight="27.0" prefWidth="81.0" text="Voltar">
+      <Button id="btVoltar" fx:id="btDeslogar" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#deslogarOnClicked" prefHeight="27.0" prefWidth="81.0" text="Deslogar">
          <font>
             <Font size="13.0" />
          </font>
