--- a/lebiton/src/main/resources/com/project/lebiton/view/Medico.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/Medico.fxml
@@ -22,7 +22,7 @@
          </font>
       </Label>
       <TextField fx:id="txUser" editable="false" layoutX="525.0" layoutY="19.0" prefHeight="25.0" prefWidth="125.0" />
-      <Button fx:id="btAgenda" layoutX="242.0" layoutY="438.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="180.0" text="Agenda">
+      <Button fx:id="btAgenda" layoutX="242.0" layoutY="438.0" mnemonicParsing="false" onAction="#visualizarConsultas" prefHeight="39.0" prefWidth="180.0" text="Agenda">
          <font>
             <Font size="18.0" />
          </font>
