--- a/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
@@ -17,7 +17,7 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btCadastroDias" layoutX="127.0" layoutY="253.0" mnemonicParsing="false" onAction="#cadastrarDiasAgenda" prefHeight="44.0" prefWidth="376.0" text="Cadastro de dias na agenda">
+      <Button fx:id="btCadastroDias" layoutX="127.0" layoutY="195.0" mnemonicParsing="false" onAction="#cadastrarDiasAgenda" prefHeight="44.0" prefWidth="376.0" text="Cadastro de dias na agenda">
          <font>
             <Font size="15.0" />
          </font>
@@ -25,6 +25,11 @@
       <Button id="btVoltar" fx:id="btDeslogar" layoutX="11.0" layoutY="11.0" mnemonicParsing="false" onMouseClicked="#deslogarOnClicked" prefHeight="27.0" prefWidth="81.0" text="Deslogar">
          <font>
             <Font size="13.0" />
+         </font>
+      </Button>
+      <Button fx:id="btAgendaMedico" layoutX="127.0" layoutY="266.0" mnemonicParsing="false" onAction="#cadastrarAgendaMedico" prefHeight="44.0" prefWidth="376.0" text="Cadastro agenda do médico">
+         <font>
+            <Font size="15.0" />
          </font>
       </Button>
    </children>
