--- a/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/HomeAdm.fxml
@@ -32,5 +32,10 @@
             <Font size="15.0" />
          </font>
       </Button>
+      <Button fx:id="btVisualizarUser" layoutX="127.0" layoutY="333.0" mnemonicParsing="false" onAction="#visualizarUsuarios" prefHeight="44.0" prefWidth="376.0" text="Exibir usuários">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
