--- a/lebiton/src/main/resources/com/project/lebiton/view/CadastroMedico.fxml
+++ b/lebiton/src/main/resources/com/project/lebiton/view/CadastroMedico.fxml
@@ -2,23 +2,22 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="708.0" prefWidth="623.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.lebiton.controller.CadastroMedicoController">
+<Pane fx:id="cbEspecialidade" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="708.0" prefWidth="623.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.lebiton.controller.CadastroMedicoController">
    <children>
       <Label layoutX="142.0" layoutY="115.0" text="Nome do Médico(a):" />
       <Label layoutX="142.0" layoutY="249.0" text="Especialidade do Médico(a):" />
       <Label layoutX="142.0" layoutY="315.0" text="Telefone do Médico(a):" />
       <Label layoutX="142.0" layoutY="183.0" text="CRM do Médico(a):" />
       <TextField fx:id="txNome" layoutX="142.0" layoutY="132.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txCrm" layoutX="142.0" layoutY="200.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txEspecialidade" layoutX="142.0" layoutY="265.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txTelefone" layoutX="142.0" layoutY="331.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txEmail" layoutX="142.0" layoutY="476.0" prefHeight="34.0" prefWidth="340.0" />
-      <TextField fx:id="txSenha" layoutX="142.0" layoutY="536.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txCrm" layoutX="142.0" layoutY="200.0" prefHeight="34.0" prefWidth="340.0" promptText="00000" />
+      <TextField fx:id="txTelefone" layoutX="142.0" layoutY="331.0" prefHeight="34.0" prefWidth="340.0" promptText="(00)00000-0000" />
+      <TextField fx:id="txEmail" layoutX="142.0" layoutY="476.0" prefHeight="34.0" prefWidth="340.0" promptText="medico@medico.com" />
       <Button fx:id="btCadastrar" layoutX="142.0" layoutY="601.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="34.0" prefWidth="340.0" text="Cadastrar" />
       <Separator layoutX="-1.0" layoutY="421.0" prefHeight="7.0" prefWidth="626.0" />
       <Label layoutX="161.0" layoutY="43.0" text="Faça o cadastro do médico(a)">
@@ -33,5 +32,7 @@
       </Button>
       <Label layoutX="142.0" layoutY="455.0" text="E-mail de login do Médico(a):" />
       <Label layoutX="142.0" layoutY="515.0" text="Senha de login do Médico(a):" />
+      <PasswordField fx:id="txSenha" layoutX="142.0" layoutY="542.0" prefHeight="34.0" prefWidth="340.0" />
+      <TextField fx:id="txEspecialidade" layoutX="142.0" layoutY="266.0" prefHeight="34.0" prefWidth="340.0" />
    </children>
 </Pane>
